feat: Translate website content to Italian, updating titles, navigation, and text across multiple HTML files for localization.

--- a/public/about.html
+++ b/public/about.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 
-<html class="dark" lang="en">
+<html class="dark" lang="it">
 
 <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>About Us | LIQUIDO Premium Vape Store</title>
+    <title>Chi Siamo | LIQUIDO Premium Vape Store</title>
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
     <link
         href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&amp;display=swap"
@@ -71,20 +71,20 @@
             </a>
 <nav class="hidden md:flex items-center gap-8">
 <a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="index.html">Home</a>
-<a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="brands.html">Brands</a>
-<a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="products.html">Products</a>
-<a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors text-primary" href="about.html">About</a>
-<a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="contact.html">Contact</a>
+<a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="brands.html">Marchi</a>
+<a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="products.html">Prodotti</a>
+<a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors text-primary" href="about.html">Chi Siamo</a>
+<a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="contact.html">Contatti</a>
 </nav>
 </div>
 <div class="flex items-center gap-6">
 <div class="hidden lg:flex items-center bg-white/5 border border-white/10 rounded-sm px-4 py-2 w-64">
 <span class="material-symbols-outlined text-white/40 text-sm">search</span>
-<input class="bg-transparent border-none focus:ring-0 text-sm placeholder:text-white/30 w-full" placeholder="Search products..." type="text"/>
+<input class="bg-transparent border-none focus:ring-0 text-sm placeholder:text-white/30 w-full" placeholder="Cerca prodotti..." type="text"/>
 </div>
 <button class="bg-primary hover:bg-white text-background-dark px-6 py-2.5 rounded-sm font-black text-xs uppercase tracking-widest transition-all flex items-center gap-2 accent-glow">
 <span class="material-symbols-outlined text-lg">location_on</span>
-                Find a Store
+                Trova un Negozio
             </button>
 </div>
 </div>
@@ -96,12 +96,12 @@
                     data-alt="Premium lifestyle vaping aesthetic in dark lounge"
                     style='background-image: linear-gradient(rgba(0, 0, 0, 0.7) 0%, rgba(0, 0, 0, 0.8) 100%), url("https://lh3.googleusercontent.com/aida-public/AB6AXuCQ58EpPEoSjHKLLI06laD1Y0O0AWjSmQPzxaDtsIaGqBDcI-Gcvi-9ceqPi7yTKVGR-Sn2SST0cULQUC3GKriiNwz4r_h3ABCa_LqKO3UYZs2lFXJqtO1qr7E-PmQAKEC1IcT0kay2mEuoIcl-uO-rdnIw3pgqE8seD2QnE6Ca-I3FfauTXj2eeCgvx5_yuhETOOmkRI1ujMECY4Xoo4_mdCxEHeIsa2zzq2Aj6aUwZgGBYA-M_uhhGmS2pLSurECFV2zoFJcLCyg");'>
                     <div class="flex flex-col gap-4 max-w-3xl">
-                        <span class="text-primary font-bold tracking-[0.2em] uppercase text-sm">Our Legacy</span>
-                        <h1 class="text-white text-5xl md:text-7xl font-black leading-tight tracking-tight">Our Story
+                        <span class="text-primary font-bold tracking-[0.2em] uppercase text-sm">La Nostra Eredità</span>
+                        <h1 class="text-white text-5xl md:text-7xl font-black leading-tight tracking-tight">La Nostra Storia
                         </h1>
                         <p class="text-white/80 text-lg md:text-xl font-light leading-relaxed">
-                            Redefining the premium vape experience through uncompromising quality, lab-tested safety,
-                            and a meticulously curated lifestyle for the modern connoisseur.
+                            Ridefiniamo l'esperienza di vaping premium attraverso qualità senza compromessi, sicurezza testata in laboratorio,
+                            e uno stile di vita meticolosamente curato per il conoscitore moderno.
                         </p>
                     </div>
                     <div class="mt-4">
@@ -114,14 +114,14 @@
                 <div class="grid grid-cols-1 lg:grid-cols-2 gap-16 items-center">
                     <div class="flex flex-col gap-8">
                         <div>
-                            <h2 class="text-primary font-bold text-sm tracking-widest uppercase mb-2">Dedication</h2>
-                            <h3 class="text-3xl md:text-5xl font-black leading-tight dark:text-white">Our Mission &amp;
-                                Expertise</h3>
+                            <h2 class="text-primary font-bold text-sm tracking-widest uppercase mb-2">Dedizione</h2>
+                            <h3 class="text-3xl md:text-5xl font-black leading-tight dark:text-white">La Nostra Missione &amp;
+                                Competenza</h3>
                         </div>
                         <p class="text-lg text-slate-600 dark:text-slate-300 leading-relaxed">
-                            We are committed to providing the finest liquids and hardware, ensuring every product meets
-                            our rigorous safety and quality standards. Our journey began with a simple goal: to filter
-                            out the noise and present only the peak of vaping excellence.
+                            Siamo impegnati a fornire i migliori liquidi e hardware, garantendo che ogni prodotto soddisfi
+                            i nostri rigorosi standard di sicurezza e qualità. Il nostro viaggio è iniziato con un obiettivo semplice: filtrare
+                            il rumore e presentare solo il meglio dell'eccellenza del vaping.
                         </p>
                         <div class="space-y-6">
                             <div
@@ -130,9 +130,9 @@
                                     <span class="material-symbols-outlined text-primary">verified_user</span>
                                 </div>
                                 <div>
-                                    <h4 class="font-bold text-lg dark:text-white">Safety First</h4>
-                                    <p class="text-sm text-slate-500 dark:text-[#baba9c]">Lab-tested products
-                                        prioritizing consumer health and transparency above market trends.</p>
+                                    <h4 class="font-bold text-lg dark:text-white">Sicurezza Prima di Tutto</h4>
+                                    <p class="text-sm text-slate-500 dark:text-[#baba9c]">Prodotti testati in laboratorio
+                                        che privilegiano la salute del consumatore e la trasparenza rispetto alle tendenze di mercato.</p>
                                 </div>
                             </div>
                             <div
@@ -141,9 +141,9 @@
                                     <span class="material-symbols-outlined text-primary">diamond</span>
                                 </div>
                                 <div>
-                                    <h4 class="font-bold text-lg dark:text-white">Premium Curation</h4>
-                                    <p class="text-sm text-slate-500 dark:text-[#baba9c]">A world-class selection of
-                                        hardware and liquids handpicked by veteran industry experts.</p>
+                                    <h4 class="font-bold text-lg dark:text-white">Curazione Premium</h4>
+                                    <p class="text-sm text-slate-500 dark:text-[#baba9c]">Una selezione di livello mondiale di
+                                        hardware e liquidi selezionati a mano da esperti veterani del settore.</p>
                                 </div>
                             </div>
                         </div>
@@ -162,9 +162,9 @@
             <!-- Quality Standards Grid -->
             <section class="bg-slate-100 dark:bg-charcoal py-20">
                 <div class="max-w-7xl mx-auto px-6 text-center mb-16">
-                    <h2 class="text-3xl md:text-4xl font-black mb-4 dark:text-white">Quality Standards</h2>
-                    <p class="text-slate-500 dark:text-[#baba9c] max-w-2xl mx-auto">Our commitment to excellence is
-                        backed by international certifications and rigorous internal protocols.</p>
+                    <h2 class="text-3xl md:text-4xl font-black mb-4 dark:text-white">Standard di Qualità</h2>
+                    <p class="text-slate-500 dark:text-[#baba9c] max-w-2xl mx-auto">Il nostro impegno per l'eccellenza è
+                        supportato da certificazioni internazionali e rigorosi protocolli interni.</p>
                 </div>
                 <div class="max-w-7xl mx-auto px-6 grid grid-cols-1 md:grid-cols-3 gap-8">
                     <div
@@ -172,27 +172,27 @@
                         <div class="bg-primary rounded-full p-4 mb-6 group-hover:scale-110 transition-transform">
                             <span class="material-symbols-outlined text-black text-3xl">gavel</span>
                         </div>
-                        <h3 class="text-xl font-bold mb-3 dark:text-white">TPD Compliant</h3>
-                        <p class="text-[#baba9c] text-sm leading-relaxed">Fully meeting European Tobacco Products
-                            Directive regulations for your total peace of mind and safety.</p>
+                        <h3 class="text-xl font-bold mb-3 dark:text-white">Conforme TPD</h3>
+                        <p class="text-[#baba9c] text-sm leading-relaxed">Completamente conforme alle normative della Direttiva sui Prodotti del Tabacco Europea
+                            per la tua totale tranquillità e sicurezza.</p>
                     </div>
                     <div
                         class="flex flex-col items-center p-8 rounded-2xl border border-slate-200 dark:border-[#54543b] bg-white dark:bg-[#27271b] hover:border-primary/50 transition-all group">
                         <div class="bg-primary rounded-full p-4 mb-6 group-hover:scale-110 transition-transform">
                             <span class="material-symbols-outlined text-black text-3xl">fact_check</span>
                         </div>
-                        <h3 class="text-xl font-bold mb-3 dark:text-white">ISO Certified</h3>
-                        <p class="text-[#baba9c] text-sm leading-relaxed">Our processes and selection criteria adhere to
-                            international standards for safety and operational excellence.</p>
+                        <h3 class="text-xl font-bold mb-3 dark:text-white">Certificato ISO</h3>
+                        <p class="text-[#baba9c] text-sm leading-relaxed">I nostri processi e criteri di selezione aderiscono a
+                            standard internazionali per la sicurezza e l'eccellenza operativa.</p>
                     </div>
                     <div
                         class="flex flex-col items-center p-8 rounded-2xl border border-slate-200 dark:border-[#54543b] bg-white dark:bg-[#27271b] hover:border-primary/50 transition-all group">
                         <div class="bg-primary rounded-full p-4 mb-6 group-hover:scale-110 transition-transform">
                             <span class="material-symbols-outlined text-black text-3xl">star</span>
                         </div>
-                        <h3 class="text-xl font-bold mb-3 dark:text-white">Curated Brands</h3>
-                        <p class="text-[#baba9c] text-sm leading-relaxed">Only the most prestigious hardware and liquid
-                            manufacturers globally pass our meticulous vetting process.</p>
+                        <h3 class="text-xl font-bold mb-3 dark:text-white">Marchi Curati</h3>
+                        <p class="text-[#baba9c] text-sm leading-relaxed">Solo i produttori di hardware e liquidi più prestigiosi
+                            a livello globale superano il nostro meticoloso processo di verifica.</p>
                     </div>
                 </div>
             </section>
@@ -213,22 +213,22 @@
                         </div>
                     </div>
                     <div class="w-full md:w-1/2 order-1 md:order-2 flex flex-col gap-6">
-                        <h2 class="text-primary font-bold tracking-widest uppercase text-sm">Experience</h2>
-                        <h3 class="text-4xl md:text-5xl font-black dark:text-white">The Shop</h3>
+                        <h2 class="text-primary font-bold tracking-widest uppercase text-sm">Esperienza</h2>
+                        <h3 class="text-4xl md:text-5xl font-black dark:text-white">Il Negozio</h3>
                         <p class="text-lg text-slate-600 dark:text-slate-300 leading-relaxed">
-                            Walking into LIQUIDO is more than a retail visit; it's an entry into a community. Our
-                            physical spaces are designed with a "lounge-first" mentality—combining industrial chic
-                            aesthetics with warm, expert service.
+                            Entrare in LIQUIDO è più di una visita al negozio; è un ingresso in una comunità. I nostri
+                            spazi fisici sono progettati con una mentalità "lounge-first"—combinando estetica chic industriale
+                            con servizio caldo ed esperto.
                         </p>
                         <p class="text-slate-500 dark:text-[#baba9c]">
-                            Whether you're a seasoned enthusiast or new to the experience, our trained staff provides
-                            personalized consultations in a relaxed, no-pressure environment. Experience our full flavor
-                            bar and hands-on hardware testing stations.
+                            Che tu sia un appassionato esperto o nuovo all'esperienza, il nostro personale formato fornisce
+                            consulenze personalizzate in un ambiente rilassato, senza pressioni. Vivi la nostra barra aromi completa
+                            e le stazioni di test hardware hands-on.
                         </p>
                         <div class="pt-4">
                             <button
                                 class="px-8 py-3 border-2 border-primary text-primary font-bold rounded-lg hover:bg-primary hover:text-black transition-all">
-                                Visit Our Store
+                                Visita il Nostro Negozio
                             </button>
                         </div>
                     </div>
@@ -249,8 +249,8 @@
                         <h2 class="text-xl font-extrabold leading-tight tracking-tight uppercase">LIQUIDO</h2>
                     </div>
                     <p class="text-sm text-slate-500 dark:text-[#baba9c] leading-relaxed">
-                        The ultimate destination for premium vaping hardware and boutique liquids. Curated for those who
-                        value quality above all else.
+                        La destinazione definitiva per hardware vaping premium e liquidi boutique. Curato per coloro che
+                        valorizzano la qualità sopra ogni altra cosa.
                     </p>
                     <div class="flex gap-4">
                         <a class="text-slate-400 hover:text-primary" href="#"><span
@@ -262,27 +262,27 @@
                     </div>
                 </div>
                 <div>
-                    <h4 class="font-bold text-lg mb-6 dark:text-white">Shop</h4>
+                    <h4 class="font-bold text-lg mb-6 dark:text-white">Negozio</h4>
                     <ul class="space-y-4 text-sm text-slate-500 dark:text-[#baba9c]">
-                        <li><a class="hover:text-primary" href="#">E-Liquids</a></li>
+                        <li><a class="hover:text-primary" href="#">E-Liquid</a></li>
                         <li><a class="hover:text-primary" href="#">Hardware</a></li>
-                        <li><a class="hover:text-primary" href="#">Accessories</a></li>
-                        <li><a class="hover:text-primary" href="#">Special Editions</a></li>
-                        <li><a class="hover:text-primary" href="#">Gift Cards</a></li>
+                        <li><a class="hover:text-primary" href="#">Accessori</a></li>
+                        <li><a class="hover:text-primary" href="#">Edizioni Speciali</a></li>
+                        <li><a class="hover:text-primary" href="#">Carte Regalo</a></li>
                     </ul>
                 </div>
                 <div>
-                    <h4 class="font-bold text-lg mb-6 dark:text-white">Company</h4>
+                    <h4 class="font-bold text-lg mb-6 dark:text-white">Azienda</h4>
                     <ul class="space-y-4 text-sm text-slate-500 dark:text-[#baba9c]">
-                        <li><a class="hover:text-primary" href="about.html">About Us</a></li>
-                        <li><a class="hover:text-primary" href="#">Safety Standards</a></li>
-                        <li><a class="hover:text-primary" href="contact.html">Store Locator</a></li>
-                        <li><a class="hover:text-primary" href="#">Careers</a></li>
+                        <li><a class="hover:text-primary" href="about.html">Chi Siamo</a></li>
+                        <li><a class="hover:text-primary" href="#">Standard di Sicurezza</a></li>
+                        <li><a class="hover:text-primary" href="contact.html">Trova Negozio</a></li>
+                        <li><a class="hover:text-primary" href="#">Carriere</a></li>
                         <li><a class="hover:text-primary" href="#">Privacy Policy</a></li>
                     </ul>
                 </div>
                 <div>
-                    <h4 class="font-bold text-lg mb-6 dark:text-white">Contact</h4>
+                    <h4 class="font-bold text-lg mb-6 dark:text-white">Contatti</h4>
                     <ul class="space-y-4 text-sm text-slate-500 dark:text-[#baba9c]">
                         <li class="flex gap-3"><span class="material-symbols-outlined text-primary text-sm">mail</span>
                             contact@liquido.com</li>
@@ -293,15 +293,15 @@
                             Metro City</li>
                     </ul>
                     <div class="mt-8">
-                        <p class="text-xs text-red-500 font-bold uppercase tracking-widest">Age Restricted</p>
-                        <p class="text-[10px] text-slate-400 mt-1 uppercase">Must be 21+ to enter site or purchase.</p>
+                        <p class="text-xs text-red-500 font-bold uppercase tracking-widest">Accesso Limitato per Età</p>
+                        <p class="text-[10px] text-slate-400 mt-1 uppercase">Devi avere 18+ anni per accedere al sito o acquistare.</p>
                     </div>
                 </div>
             </div>
             <div class="max-w-7xl mx-auto px-6 mt-16 pt-8 border-t border-slate-200 dark:border-[#393928] text-center">
                 <p class="text-xs text-slate-500 dark:text-[#baba9c]">
-                    © 2024 LIQUIDO. All rights reserved. Vaping products may contain nicotine, which is an addictive
-                    chemical.
+                    © 2024 LIQUIDO. Tutti i diritti riservati. I prodotti per il vaping possono contenere nicotina, che è una sostanza
+                    che crea dipendenza.
                 </p>
             </div>
         </footer>
