--- a/public/product-detail.html
+++ b/public/product-detail.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html class="dark" lang="en"><head>
+<html class="dark" lang="it"><head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Product Detail View | LIQUIDO</title>
+<title>Dettaglio Prodotto | LIQUIDO</title>
 <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
 <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&amp;display=swap" rel="stylesheet"/>
 <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap" rel="stylesheet"/>
@@ -58,20 +58,20 @@
             </a>
 <nav class="hidden md:flex items-center gap-8">
 <a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="index.html">Home</a>
-<a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="brands.html">Brands</a>
-<a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="products.html">Products</a>
-<a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="about.html">About</a>
-<a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="contact.html">Contact</a>
+<a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="brands.html">Marchi</a>
+<a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="products.html">Prodotti</a>
+<a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="about.html">Chi Siamo</a>
+<a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="contact.html">Contatti</a>
 </nav>
 </div>
 <div class="flex items-center gap-6">
 <div class="hidden lg:flex items-center bg-white/5 border border-white/10 rounded-sm px-4 py-2 w-64">
 <span class="material-symbols-outlined text-white/40 text-sm">search</span>
-<input class="bg-transparent border-none focus:ring-0 text-sm placeholder:text-white/30 w-full" placeholder="Search products..." type="text"/>
+<input class="bg-transparent border-none focus:ring-0 text-sm placeholder:text-white/30 w-full" placeholder="Cerca prodotti..." type="text"/>
 </div>
 <button class="bg-primary hover:bg-white text-background-dark px-6 py-2.5 rounded-sm font-black text-xs uppercase tracking-widest transition-all flex items-center gap-2 accent-glow">
 <span class="material-symbols-outlined text-lg">location_on</span>
-                Find a Store
+                Trova un Negozio
             </button>
 </div>
 </div>
@@ -148,7 +148,7 @@
 </button>
 <a href="https://wa.me/1234567890?text=Hello%2C%20I%20would%20like%20to%20inquire%20about%20bulk%20orders" target="_blank" class="flex-1 flex min-w-[200px] items-center justify-center gap-2 rounded-xl h-14 px-8 bg-surface-dark border border-white/10 text-white text-base font-bold hover:bg-white/5 transition-colors cursor-pointer">
 <span class="material-symbols-outlined">chat</span>
-<span>Inquire for Bulk</span>
+<span>Richiedi per Quantità</span>
 </a>
 </div>
 <div class="flex flex-col gap-4">
