--- a/public/contact.html
+++ b/public/contact.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html class="dark" lang="en"><head>
+<html class="dark" lang="it"><head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Contact &amp; Location | LIQUIDO</title>
+<title>Contatti &amp; Posizione | LIQUIDO</title>
 <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
 <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&amp;display=swap" rel="stylesheet"/>
 <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap" rel="stylesheet"/>
@@ -60,28 +60,28 @@
             </a>
 <nav class="hidden md:flex items-center gap-8">
 <a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="index.html">Home</a>
-<a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="brands.html">Brands</a>
-<a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="products.html">Products</a>
-<a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="about.html">About</a>
-<a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors text-primary" href="contact.html">Contact</a>
+<a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="brands.html">Marchi</a>
+<a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="products.html">Prodotti</a>
+<a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="about.html">Chi Siamo</a>
+<a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors text-primary" href="contact.html">Contatti</a>
 </nav>
 </div>
 <div class="flex items-center gap-6">
 <div class="hidden lg:flex items-center bg-white/5 border border-white/10 rounded-sm px-4 py-2 w-64">
 <span class="material-symbols-outlined text-white/40 text-sm">search</span>
-<input class="bg-transparent border-none focus:ring-0 text-sm placeholder:text-white/30 w-full" placeholder="Search products..." type="text"/>
+<input class="bg-transparent border-none focus:ring-0 text-sm placeholder:text-white/30 w-full" placeholder="Cerca prodotti..." type="text"/>
 </div>
 <button class="bg-primary hover:bg-white text-background-dark px-6 py-2.5 rounded-sm font-black text-xs uppercase tracking-widest transition-all flex items-center gap-2 accent-glow">
 <span class="material-symbols-outlined text-lg">location_on</span>
-                Find a Store
+                Trova un Negozio
             </button>
 </div>
 </div>
 </header>
 <main class="pt-20 max-w-[1440px] mx-auto px-6 lg:px-20 py-10">
 <div class="mb-12 text-center lg:text-left">
-<h1 class="text-white text-5xl font-black leading-tight tracking-[-0.033em] mb-4">Contact &amp; Location</h1>
-<p class="text-[#baba9c] text-lg max-w-2xl mx-auto lg:mx-0">Experience the essence of LIQUIDO. Visit our flagship store for a personalized consultation or reach out to our premium support team.</p>
+<h1 class="text-white text-5xl font-black leading-tight tracking-[-0.033em] mb-4">Contatti &amp; Posizione</h1>
+<p class="text-[#baba9c] text-lg max-w-2xl mx-auto lg:mx-0">Vivi l'essenza di LIQUIDO. Visita il nostro negozio principale per una consulenza personalizzata o contatta il nostro team di supporto premium.</p>
 </div>
 <div class="grid grid-cols-1 lg:grid-cols-2 gap-12 items-start">
 <div class="flex flex-col gap-10">
