--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html class="dark" lang="en"><head>
+<html class="dark" lang="it"><head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>LIQUIDO Vape Shop | Premium Vaping Experience</title>
+<title>LIQUIDO Vape Shop | Esperienza Vaping Premium</title>
 <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
 <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&amp;display=swap" rel="stylesheet"/>
 <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap" rel="stylesheet"/>
@@ -60,20 +60,20 @@
             </a>
 <nav class="hidden md:flex items-center gap-8">
 <a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="index.html">Home</a>
-<a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="brands.html">Brands</a>
-<a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="products.html">Products</a>
-<a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="about.html">About</a>
-<a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="contact.html">Contact</a>
+<a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="brands.html">Marchi</a>
+<a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="products.html">Prodotti</a>
+<a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="about.html">Chi Siamo</a>
+<a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="contact.html">Contatti</a>
 </nav>
 </div>
 <div class="flex items-center gap-6">
 <div class="hidden lg:flex items-center bg-white/5 border border-white/10 rounded-sm px-4 py-2 w-64">
 <span class="material-symbols-outlined text-white/40 text-sm">search</span>
-<input class="bg-transparent border-none focus:ring-0 text-sm placeholder:text-white/30 w-full" placeholder="Search products..." type="text"/>
+<input class="bg-transparent border-none focus:ring-0 text-sm placeholder:text-white/30 w-full" placeholder="Cerca prodotti..." type="text"/>
 </div>
 <button class="bg-primary hover:bg-white text-background-dark px-6 py-2.5 rounded-sm font-black text-xs uppercase tracking-widest transition-all flex items-center gap-2 accent-glow">
 <span class="material-symbols-outlined text-lg">location_on</span>
-                Find a Store
+                Trova un Negozio
             </button>
 </div>
 </div>
@@ -87,20 +87,20 @@
 <span class="animate-ping absolute inline-flex h-full w-full rounded-full bg-primary opacity-75"></span>
 <span class="relative inline-flex rounded-full h-2 w-2 bg-primary"></span>
 </span>
-                    New Arrivals Now In Stock
+                    Nuovi Arrivi Ora Disponibili
                 </div>
 <h1 class="text-7xl lg:text-9xl text-bold-modern leading-[0.85] uppercase">
                     LIQUIDO <br/><span class="text-primary italic">VAPE SHOP</span>
                 </h1>
 <p class="text-lg text-slate-400 max-w-lg leading-relaxed font-medium">
-                    Experience the next level of premium vaping. Curated hardware and artisanal liquids for the modern connoisseur.
+                    Vivi il prossimo livello del vaping premium. Hardware selezionato e liquidi artigianali per il conoscitore moderno.
                 </p>
 <div class="flex flex-wrap gap-4 pt-4">
 <button class="bg-primary hover:bg-white text-background-dark px-10 py-5 rounded-sm font-black text-sm uppercase tracking-widest transition-all accent-glow-strong">
-                        Shop Collection
+                        Acquista Collezione
                     </button>
 <button class="bg-white/5 hover:bg-white/10 border border-white/10 px-10 py-5 rounded-sm font-black text-sm uppercase tracking-widest transition-all">
-                        Discover Brands
+                        Scopri i Marchi
                     </button>
 </div>
 </div>
@@ -112,7 +112,7 @@
 </section>
 <section class="py-20 border-y border-white/5 bg-charcoal">
 <div class="max-w-[1440px] mx-auto px-6 lg:px-20">
-<p class="text-center text-white/30 uppercase tracking-[0.4em] text-[10px] font-black mb-12">Authorized Retailer For</p>
+<p class="text-center text-white/30 uppercase tracking-[0.4em] text-[10px] font-black mb-12">Rivenditore Autorizzato Per</p>
 <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-6 gap-12 items-center opacity-50">
 <div class="flex flex-col items-center gap-4 group cursor-pointer hover:opacity-100 transition-opacity">
 <img class="h-8 object-contain grayscale group-hover:grayscale-0 transition-all" data-alt="GeekVape Brand Logo" src="https://lh3.googleusercontent.com/aida-public/AB6AXuAIunUQDGAffOrIRYygFUhOARIZ5kEzK7mq4WFctlQxmW-50eBhAwnAoNX4ZYmabCsy_zgyOyPYv5sJw9I48vYZWJz0qsiDZC7ry1YnC7qASjwNpJ6YO54bLqPCTeHCAAnA5g8GPrGW8Rk9hgBfvfTbLT0RXBMBDX21Hp2GFU9yxA8IJE2aEm39OOzGHcBePaKBWqiZmMWIp12WPAbY5EqpfmMyucb9C0lf7KyWJiWHhEhfIwogdJXAvzD9gu5vwKnyu_AyU5yW_ZQ"/>
@@ -145,8 +145,8 @@
 <div class="max-w-[1440px] mx-auto">
 <div class="flex flex-col md:flex-row md:items-end justify-between mb-20 gap-8">
 <div class="space-y-4">
-<h2 class="text-5xl lg:text-6xl text-bold-modern uppercase">New Arrivals</h2>
-<p class="text-slate-500 max-w-md font-medium">Hand-picked selections of the latest hardware and premium e-liquids from around the world.</p>
+<h2 class="text-5xl lg:text-6xl text-bold-modern uppercase">Nuovi Arrivi</h2>
+<p class="text-slate-500 max-w-md font-medium">Selezioni accuratamente scelte dell'ultimo hardware e e-liquid premium da tutto il mondo.</p>
 </div>
 <div class="flex gap-4">
 <button class="size-14 rounded-sm border border-white/10 flex items-center justify-center hover:bg-primary hover:text-background-dark transition-all">
@@ -161,7 +161,7 @@
 <div class="group bg-charcoal border border-white/5 rounded-sm overflow-hidden hover:border-primary/40 transition-all duration-500">
 <div class="aspect-[4/5] overflow-hidden bg-black relative">
 <img class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-700 opacity-80 group-hover:opacity-100" data-alt="premium vape mod" src="https://lh3.googleusercontent.com/aida-public/AB6AXuBb5VOh3-IPUWaUQW5BdG5LqiTlxWkJbyzeF9e1Yo2-8ZDiZJKfdtRBr84LkW7UouiZSZFt7FBmbBoFFMwWgVSb4-gIDYmoc5XRDlfrUOdpgDdm7dLBYptVRAhfy3R7fR4FNfgvZHSf1eN7fnlMJlXqrbBBSreiCpf7XZN5dq0_Gx1hvoUsPb1HucFuQV-EShePiX3rXRIwyek0moIJ09zlhT9zi-dNcWMt4B7O4ORUwcfTWyE38veoOP5JzcTX7KVwTEo73AuO2Fc"/>
-<div class="absolute top-4 left-4 bg-primary text-background-dark text-[10px] font-black px-3 py-1 uppercase tracking-widest">New Arrival</div>
+<div class="absolute top-4 left-4 bg-primary text-background-dark text-[10px] font-black px-3 py-1 uppercase tracking-widest">Nuovo Arrivo</div>
 </div>
 <div class="p-8 space-y-4">
 <div class="flex justify-between items-start">
@@ -172,7 +172,7 @@
 <div class="pt-6 flex items-center justify-between border-t border-white/5">
 <span class="font-black text-xl text-primary">$129.99</span>
 <button class="text-white font-black text-[10px] uppercase tracking-widest flex items-center gap-2 group/btn hover:text-primary transition-colors">
-                                View Product 
+                                Visualizza Prodotto 
                                 <span class="material-symbols-outlined text-sm group-hover/btn:translate-x-1 transition-transform">arrow_forward</span>
 </button>
 </div>
@@ -185,13 +185,13 @@
 <div class="p-8 space-y-4">
 <div class="flex justify-between items-start">
 <h3 class="text-bold-modern text-xl group-hover:text-primary transition-colors uppercase">Arctic Lychee</h3>
-<span class="text-white/20 text-[10px] font-black uppercase tracking-widest">Liquids</span>
+<span class="text-white/20 text-[10px] font-black uppercase tracking-widest">Liquidi</span>
 </div>
 <p class="text-sm text-slate-500 line-clamp-2 leading-relaxed">Premium 70/30 VG blend with intense Malaysian cooling effect.</p>
 <div class="pt-6 flex items-center justify-between border-t border-white/5">
 <span class="font-black text-xl text-primary">$24.99</span>
 <button class="text-white font-black text-[10px] uppercase tracking-widest flex items-center gap-2 group/btn hover:text-primary transition-colors">
-                                View Product 
+                                Visualizza Prodotto 
                                 <span class="material-symbols-outlined text-sm group-hover/btn:translate-x-1 transition-transform">arrow_forward</span>
 </button>
 </div>
@@ -200,7 +200,7 @@
 <div class="group bg-charcoal border border-white/5 rounded-sm overflow-hidden hover:border-primary/40 transition-all duration-500">
 <div class="aspect-[4/5] overflow-hidden bg-black relative">
 <img class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-700 opacity-80 group-hover:opacity-100" data-alt="pod system" src="https://lh3.googleusercontent.com/aida-public/AB6AXuBAFEcXbXRZDGwlbvsWof3SCGzg_54ZCg89r12_bKMsJzFyQMtWpEXLQ6tXyy4ivmxV_ttpPx0TU2GkgT_GCKayymZJTsgfv_qRv2U3-FeigA2YNC-gCAemD96cUlfpvdsQTx_OxG49zm_6Yn9cwxixajkVq9Xo3KHffMIzkqlPsaJ-NAj-6KzcfoeAvW9dYNrjiIiVVAEX-Ct9lKI0WHreR-YSY1BrbvoqY5q6i_YY1QupoO7dysACjEtrWGTTkKjPIZtA6ypugZo"/>
-<div class="absolute top-4 left-4 bg-primary text-background-dark text-[10px] font-black px-3 py-1 uppercase tracking-widest">Trending</div>
+<div class="absolute top-4 left-4 bg-primary text-background-dark text-[10px] font-black px-3 py-1 uppercase tracking-widest">Di Tendenza</div>
 </div>
 <div class="p-8 space-y-4">
 <div class="flex justify-between items-start">
@@ -211,7 +211,7 @@
 <div class="pt-6 flex items-center justify-between border-t border-white/5">
 <span class="font-black text-xl text-primary">$39.99</span>
 <button class="text-white font-black text-[10px] uppercase tracking-widest flex items-center gap-2 group/btn hover:text-primary transition-colors">
-                                View Product 
+                                Visualizza Prodotto 
                                 <span class="material-symbols-outlined text-sm group-hover/btn:translate-x-1 transition-transform">arrow_forward</span>
 </button>
 </div>
@@ -224,13 +224,13 @@
 <div class="p-8 space-y-4">
 <div class="flex justify-between items-start">
 <h3 class="text-bold-modern text-xl group-hover:text-primary transition-colors uppercase">Velvet Custard</h3>
-<span class="text-white/20 text-[10px] font-black uppercase tracking-widest">Liquids</span>
+<span class="text-white/20 text-[10px] font-black uppercase tracking-widest">Liquidi</span>
 </div>
 <p class="text-sm text-slate-500 line-clamp-2 leading-relaxed">Smooth vanilla bean custard with toasted almond finish.</p>
 <div class="pt-6 flex items-center justify-between border-t border-white/5">
 <span class="font-black text-xl text-primary">$28.00</span>
 <button class="text-white font-black text-[10px] uppercase tracking-widest flex items-center gap-2 group/btn hover:text-primary transition-colors">
-                                View Product 
+                                Visualizza Prodotto 
                                 <span class="material-symbols-outlined text-sm group-hover/btn:translate-x-1 transition-transform">arrow_forward</span>
 </button>
 </div>
@@ -246,17 +246,17 @@
 </div>
 <div class="relative z-10 max-w-[1440px] mx-auto px-6 lg:px-20">
 <div class="bg-black/40 border border-white/5 p-16 lg:p-24 rounded-sm glass-effect flex flex-col items-center text-center space-y-10">
-<span class="text-primary font-black uppercase tracking-[0.6em] text-[10px]">The Liquido Standard</span>
-<h2 class="text-6xl lg:text-8xl text-bold-modern max-w-5xl tracking-tighter uppercase">Beyond Clouds. <br/><span class="text-primary italic underline decoration-white/5">Pure Performance.</span></h2>
+<span class="text-primary font-black uppercase tracking-[0.6em] text-[10px]">Lo Standard Liquido</span>
+<h2 class="text-6xl lg:text-8xl text-bold-modern max-w-5xl tracking-tighter uppercase">Oltre le Nuvole. <br/><span class="text-primary italic underline decoration-white/5">Pura Performance.</span></h2>
 <p class="text-xl text-slate-400 max-w-2xl leading-relaxed font-medium">
-                    We don't just sell products; we curate experiences. Every mod, tank, and bottle of juice in our shop meets the highest safety and performance criteria.
+                    Non vendiamo solo prodotti; curiamo esperienze. Ogni mod, tank e bottiglia di liquido nel nostro negozio soddisfa i più alti criteri di sicurezza e prestazioni.
                 </p>
 <div class="flex flex-col sm:flex-row gap-6 pt-8 w-full sm:w-auto">
 <button class="bg-primary text-background-dark px-12 py-6 rounded-sm font-black text-xs uppercase tracking-widest hover:bg-white transition-all accent-glow">
-                        Store Locator
+                        Trova Negozio
                     </button>
 <button class="bg-white/5 border border-white/10 text-white px-12 py-6 rounded-sm font-black text-xs uppercase tracking-widest hover:bg-white/10 transition-all">
-                        Our Standards
+                        I Nostri Standard
                     </button>
 </div>
 </div>
@@ -272,9 +272,9 @@
 <h2 class="text-2xl text-bold-modern tracking-tighter uppercase">LIQUIDO</h2>
 </div>
 <div class="space-y-4">
-<h4 class="text-[10px] font-black uppercase tracking-widest text-primary/60">About Us</h4>
+<h4 class="text-[10px] font-black uppercase tracking-widest text-primary/60">Chi Siamo</h4>
 <p class="text-slate-400 leading-relaxed text-sm font-medium">
-                        Since 2018, LIQUIDO has redefined the premium vaping landscape. We curate only the most exceptional hardware and artisanal e-liquids for enthusiasts who refuse to compromise on quality or style.
+                        Dal 2018, LIQUIDO ha ridefinito il panorama del vaping premium. Curiamo solo l'hardware più eccezionale e gli e-liquid artigianali per gli appassionati che rifiutano di scendere a compromessi su qualità o stile.
                     </p>
 </div>
 <div class="flex gap-4">
@@ -290,16 +290,16 @@
 </div>
 </div>
 <div class="space-y-8">
-<h4 class="font-black text-xs uppercase tracking-[0.2em] text-white">Quick Links</h4>
+<h4 class="font-black text-xs uppercase tracking-[0.2em] text-white">Link Rapidi</h4>
 <ul class="space-y-5 text-slate-500 text-xs font-bold uppercase tracking-widest">
 <li><a class="hover:text-primary transition-colors flex items-center gap-2" href="index.html"><span class="size-1 bg-white/10 group-hover:bg-primary rounded-full transition-colors"></span>Home</a></li>
-<li><a class="hover:text-primary transition-colors flex items-center gap-2" href="brands.html"><span class="size-1 bg-white/10 group-hover:bg-primary rounded-full transition-colors"></span>Brands</a></li>
-<li><a class="hover:text-primary transition-colors flex items-center gap-2" href="products.html"><span class="size-1 bg-white/10 group-hover:bg-primary rounded-full transition-colors"></span>Products</a></li>
-<li><a class="hover:text-primary transition-colors flex items-center gap-2" href="contact.html"><span class="size-1 bg-white/10 group-hover:bg-primary rounded-full transition-colors"></span>Contact</a></li>
+<li><a class="hover:text-primary transition-colors flex items-center gap-2" href="brands.html"><span class="size-1 bg-white/10 group-hover:bg-primary rounded-full transition-colors"></span>Marchi</a></li>
+<li><a class="hover:text-primary transition-colors flex items-center gap-2" href="products.html"><span class="size-1 bg-white/10 group-hover:bg-primary rounded-full transition-colors"></span>Prodotti</a></li>
+<li><a class="hover:text-primary transition-colors flex items-center gap-2" href="contact.html"><span class="size-1 bg-white/10 group-hover:bg-primary rounded-full transition-colors"></span>Contatti</a></li>
 </ul>
 </div>
 <div class="space-y-8">
-<h4 class="font-black text-xs uppercase tracking-[0.2em] text-white">Partner Brands</h4>
+<h4 class="font-black text-xs uppercase tracking-[0.2em] text-white">Marchi Partner</h4>
 <ul class="space-y-5 text-slate-500 text-xs font-bold uppercase tracking-widest">
 <li><a class="hover:text-primary transition-colors" href="#">GeekVape</a></li>
 <li><a class="hover:text-primary transition-colors" href="#">Vaporesso</a></li>
@@ -309,7 +309,7 @@
 </ul>
 </div>
 <div class="space-y-8">
-<h4 class="font-black text-xs uppercase tracking-[0.2em] text-white">Contact Info</h4>
+<h4 class="font-black text-xs uppercase tracking-[0.2em] text-white">Informazioni Contatto</h4>
 <div class="space-y-6">
 <div class="flex gap-4">
 <span class="material-symbols-outlined text-primary text-xl">location_on</span>
@@ -330,15 +330,15 @@
 </div>
 </div>
 <div class="max-w-[1440px] mx-auto pt-12 border-t border-white/5 flex flex-col md:flex-row justify-between gap-8 items-center text-[10px] text-slate-500 font-black uppercase tracking-[0.3em]">
-<p>Copyright 2024 LIQUIDO. ALL RIGHTS RESERVED.</p>
+<p>Copyright 2024 LIQUIDO. TUTTI I DIRITTI RISERVATI.</p>
 <div class="flex gap-10">
 <a class="hover:text-white transition-colors" href="#">Privacy Policy</a>
-<a class="hover:text-white transition-colors" href="#">Terms of Service</a>
-<a class="hover:text-white transition-colors" href="#">Compliance</a>
+<a class="hover:text-white transition-colors" href="#">Termini di Servizio</a>
+<a class="hover:text-white transition-colors" href="#">Conformità</a>
 </div>
 <div class="flex items-center gap-2 text-primary border border-primary/20 px-4 py-2 rounded-sm bg-primary/5">
 <span class="material-symbols-outlined text-sm">verified_user</span>
-                21+ ONLY • ENJOY RESPONSIBLY
+                18+ SOLO • GODITI RESPONSABILMENTE
             </div>
 </div>
 </footer>
