refactor: Update navigation links and structure across multiple admin HTML files for improved consistency and accessibility.

--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -61,19 +61,19 @@
 </div>
 <!-- Navigation Links -->
 <nav class="flex flex-col gap-1 px-3">
-<a class="sidebar-active flex items-center gap-3 px-3 py-2.5 rounded-lg text-primary" href="#">
+<a class="sidebar-active flex items-center gap-3 px-3 py-2.5 rounded-lg text-primary" href="dashboard.html">
 <span class="material-symbols-outlined">dashboard</span>
 <p class="text-sm font-semibold">Dashboard</p>
 </a>
-<a class="flex items-center gap-3 px-3 py-2.5 rounded-lg text-slate-600 dark:text-[#baba9c] hover:bg-slate-100 dark:hover:bg-[#2a2a1a] transition-colors" href="#">
+<a class="flex items-center gap-3 px-3 py-2.5 rounded-lg text-slate-600 dark:text-[#baba9c] hover:bg-slate-100 dark:hover:bg-[#2a2a1a] transition-colors" href="products/index.html">
 <span class="material-symbols-outlined">inventory_2</span>
 <p class="text-sm font-medium">Products</p>
 </a>
-<a class="flex items-center gap-3 px-3 py-2.5 rounded-lg text-slate-600 dark:text-[#baba9c] hover:bg-slate-100 dark:hover:bg-[#2a2a1a] transition-colors" href="#">
+<a class="flex items-center gap-3 px-3 py-2.5 rounded-lg text-slate-600 dark:text-[#baba9c] hover:bg-slate-100 dark:hover:bg-[#2a2a1a] transition-colors" href="brands/index.html">
 <span class="material-symbols-outlined">loyalty</span>
 <p class="text-sm font-medium">Brands</p>
 </a>
-<a class="flex items-center gap-3 px-3 py-2.5 rounded-lg text-slate-600 dark:text-[#baba9c] hover:bg-slate-100 dark:hover:bg-[#2a2a1a] transition-colors" href="#">
+<a class="flex items-center gap-3 px-3 py-2.5 rounded-lg text-slate-600 dark:text-[#baba9c] hover:bg-slate-100 dark:hover:bg-[#2a2a1a] transition-colors" href="settings.html">
 <span class="material-symbols-outlined">settings</span>
 <p class="text-sm font-medium">Store Settings</p>
 </a>
@@ -81,10 +81,10 @@
 </div>
 <!-- Logout Section -->
 <div class="px-4">
-<button class="flex w-full cursor-pointer items-center justify-center overflow-hidden rounded-lg h-11 bg-primary text-background-dark text-sm font-bold transition-transform hover:scale-[1.02] active:scale-95">
+<a href="index.html" class="flex w-full cursor-pointer items-center justify-center overflow-hidden rounded-lg h-11 bg-primary text-background-dark text-sm font-bold transition-transform hover:scale-[1.02] active:scale-95">
 <span class="material-symbols-outlined mr-2">logout</span>
 <span>Logout</span>
-</button>
+</a>
 </div>
 </aside>
 <!-- Main Content -->
@@ -166,14 +166,14 @@
                         Quick Actions
                     </h2>
 <div class="flex flex-wrap gap-4">
-<button class="flex items-center gap-3 min-w-[180px] px-6 h-14 bg-primary text-background-dark rounded-xl font-bold shadow-lg shadow-primary/10 transition-all hover:brightness-110 active:scale-95">
+<a href="products/add.html" class="flex items-center gap-3 min-w-[180px] px-6 h-14 bg-primary text-background-dark rounded-xl font-bold shadow-lg shadow-primary/10 transition-all hover:brightness-110 active:scale-95">
 <span class="material-symbols-outlined">add_box</span>
 <span>Add New Product</span>
-</button>
-<button class="flex items-center gap-3 min-w-[180px] px-6 h-14 bg-slate-800 dark:bg-[#393928] text-white rounded-xl font-bold transition-all hover:bg-slate-700 dark:hover:bg-[#4a4a35] active:scale-95">
+</a>
+<a href="brands/add.html" class="flex items-center gap-3 min-w-[180px] px-6 h-14 bg-slate-800 dark:bg-[#393928] text-white rounded-xl font-bold transition-all hover:bg-slate-700 dark:hover:bg-[#4a4a35] active:scale-95">
 <span class="material-symbols-outlined">add_circle</span>
 <span>Add New Brand</span>
-</button>
+</a>
 <button class="flex items-center gap-3 min-w-[180px] px-6 h-14 border-2 border-slate-200 dark:border-[#393928] text-slate-600 dark:text-[#baba9c] rounded-xl font-bold transition-all hover:border-primary/50 hover:text-primary active:scale-95">
 <span class="material-symbols-outlined">download</span>
 <span>Export Reports</span>
