--- a/admin/products/add.html
+++ b/admin/products/add.html
@@ -39,6 +39,10 @@
             border-color: #f2f20d !important;
             box-shadow: 0 0 0 1px #f2f20d !important;
         }
+        .sidebar-active {
+            background-color: #393928;
+            border-left: 4px solid #f2f20d;
+        }
     </style>
 </head>
 <body class="bg-background-light dark:bg-background-dark text-slate-900 dark:text-white min-h-screen">
@@ -65,9 +69,9 @@
 </div>
 <div class="flex items-center gap-4">
 <nav class="hidden lg:flex items-center gap-6 mr-4">
-<a class="text-slate-700 dark:text-white text-sm font-medium leading-normal hover:text-primary transition-colors" href="#">Dashboard</a>
-<a class="text-slate-700 dark:text-white text-sm font-medium leading-normal hover:text-primary transition-colors" href="#">Brands</a>
-<a class="text-primary text-sm font-bold leading-normal" href="#">Products</a>
+<a class="text-slate-700 dark:text-white text-sm font-medium leading-normal hover:text-primary transition-colors" href="../dashboard.html">Dashboard</a>
+<a class="text-slate-700 dark:text-white text-sm font-medium leading-normal hover:text-primary transition-colors" href="../brands/index.html">Brands</a>
+<a class="text-primary text-sm font-bold leading-normal" href="index.html">Products</a>
 <a class="text-slate-700 dark:text-white text-sm font-medium leading-normal hover:text-primary transition-colors" href="#">Profile</a>
 </nav>
 <div class="flex gap-2">
@@ -82,42 +86,53 @@
 </div>
 </header>
 <div class="flex flex-1">
-<!-- Sidebar (Hidden on mobile) -->
-<aside class="hidden md:flex w-64 flex-col border-r border-slate-200 dark:border-[#393928] bg-background-light dark:bg-background-dark p-4 gap-6">
-<div class="flex flex-col px-3">
-<h1 class="text-slate-900 dark:text-white text-base font-bold">LIQUIDO Admin</h1>
-<p class="text-slate-500 dark:text-[#baba9c] text-xs font-normal">Vape Store Management</p>
+<!-- Sidebar Navigation -->
+<aside class="hidden md:flex w-64 bg-background-light dark:bg-[#12120a] border-r border-slate-200 dark:border-[#393928] flex flex-col justify-between py-6 sticky top-0 h-screen">
+<div class="flex flex-col gap-8">
+<!-- Brand Identity -->
+<div class="px-6 flex items-center gap-3">
+<div class="bg-primary rounded-lg size-10 flex items-center justify-center text-background-dark">
+<span class="material-symbols-outlined font-bold">water_drop</span>
 </div>
-<nav class="flex flex-col gap-1">
-<a class="flex items-center gap-3 px-3 py-2 rounded-lg text-slate-700 dark:text-[#baba9c] hover:bg-slate-100 dark:hover:bg-[#27271b] hover:text-primary transition-all" href="#">
+<div class="flex flex-col">
+<h1 class="text-lg font-bold leading-tight tracking-tight">LIQUIDO</h1>
+<p class="text-slate-500 dark:text-[#baba9c] text-xs font-medium uppercase tracking-widest">Admin Console</p>
+</div>
+</div>
+<!-- Navigation Links -->
+<nav class="flex flex-col gap-1 px-3">
+<a class="flex items-center gap-3 px-3 py-2.5 rounded-lg text-slate-600 dark:text-[#baba9c] hover:bg-slate-100 dark:hover:bg-[#2a2a1a] transition-colors" href="../dashboard.html">
 <span class="material-symbols-outlined">dashboard</span>
-<span class="text-sm font-medium">Dashboard</span>
+<p class="text-sm font-medium">Dashboard</p>
 </a>
-<a class="flex items-center gap-3 px-3 py-2 rounded-lg bg-primary/10 text-primary" href="#">
-<span class="material-symbols-outlined" style="font-variation-settings: 'FILL' 1">inventory_2</span>
-<span class="text-sm font-bold">Inventory</span>
+<a class="sidebar-active flex items-center gap-3 px-3 py-2.5 rounded-lg text-primary" href="index.html">
+<span class="material-symbols-outlined">inventory_2</span>
+<p class="text-sm font-semibold">Products</p>
 </a>
-<a class="flex items-center gap-3 px-3 py-2 rounded-lg text-slate-700 dark:text-[#baba9c] hover:bg-slate-100 dark:hover:bg-[#27271b] hover:text-primary transition-all" href="#">
+<a class="flex items-center gap-3 px-3 py-2.5 rounded-lg text-slate-600 dark:text-[#baba9c] hover:bg-slate-100 dark:hover:bg-[#2a2a1a] transition-colors" href="../brands/index.html">
 <span class="material-symbols-outlined">loyalty</span>
-<span class="text-sm font-medium">Brands</span>
+<p class="text-sm font-medium">Brands</p>
 </a>
-<a class="flex items-center gap-3 px-3 py-2 rounded-lg text-slate-700 dark:text-[#baba9c] hover:bg-slate-100 dark:hover:bg-[#27271b] hover:text-primary transition-all" href="#">
-<span class="material-symbols-outlined">analytics</span>
-<span class="text-sm font-medium">Sales Report</span>
-</a>
-<div class="my-4 border-t border-slate-200 dark:border-[#393928]"></div>
-<a class="flex items-center gap-3 px-3 py-2 rounded-lg text-slate-700 dark:text-[#baba9c] hover:bg-slate-100 dark:hover:bg-[#27271b] hover:text-primary transition-all" href="#">
+<a class="flex items-center gap-3 px-3 py-2.5 rounded-lg text-slate-600 dark:text-[#baba9c] hover:bg-slate-100 dark:hover:bg-[#2a2a1a] transition-colors" href="../settings.html">
 <span class="material-symbols-outlined">settings</span>
-<span class="text-sm font-medium">Settings</span>
+<p class="text-sm font-medium">Store Settings</p>
 </a>
 </nav>
+</div>
+<!-- Logout Section -->
+<div class="px-4">
+<a href="../index.html" class="flex w-full cursor-pointer items-center justify-center overflow-hidden rounded-lg h-11 bg-primary text-background-dark text-sm font-bold transition-transform hover:scale-[1.02] active:scale-95">
+<span class="material-symbols-outlined mr-2">logout</span>
+<span>Logout</span>
+</a>
+</div>
 </aside>
 <!-- Main Content -->
 <main class="flex-1 flex flex-col items-center">
 <div class="max-w-[1000px] w-full px-6 py-8">
 <!-- Breadcrumbs -->
 <div class="flex items-center gap-2 mb-6">
-<a class="text-slate-500 dark:text-[#baba9c] text-sm font-medium hover:text-primary" href="#">Dashboard</a>
+<a class="text-slate-500 dark:text-[#baba9c] text-sm font-medium hover:text-primary" href="../dashboard.html">Dashboard</a>
 <span class="material-symbols-outlined text-slate-400 dark:text-[#54543b] text-base">chevron_right</span>
 <a class="text-slate-500 dark:text-[#baba9c] text-sm font-medium hover:text-primary" href="#">Inventory</a>
 <span class="material-symbols-outlined text-slate-400 dark:text-[#54543b] text-base">chevron_right</span>
