--- a/admin/brands/add.html
+++ b/admin/brands/add.html
@@ -58,11 +58,11 @@
 <h2 class="text-lg font-bold leading-tight tracking-[-0.015em] font-display">LIQUIDO Admin</h2>
 </div>
 <nav class="flex items-center gap-9">
-<a class="text-muted-dark hover:text-primary text-sm font-medium leading-normal transition-colors" href="#">Dashboard</a>
-<a class="text-white text-sm font-medium leading-normal border-b-2 border-primary pb-1" href="#">Brands</a>
-<a class="text-muted-dark hover:text-primary text-sm font-medium leading-normal transition-colors" href="#">Inventory</a>
+<a class="text-muted-dark hover:text-primary text-sm font-medium leading-normal transition-colors" href="../dashboard.html">Dashboard</a>
+<a class="text-white text-sm font-medium leading-normal border-b-2 border-primary pb-1" href="index.html">Brands</a>
+<a class="text-muted-dark hover:text-primary text-sm font-medium leading-normal transition-colors" href="../products/index.html">Inventory</a>
 <a class="text-muted-dark hover:text-primary text-sm font-medium leading-normal transition-colors" href="#">Orders</a>
-<a class="text-muted-dark hover:text-primary text-sm font-medium leading-normal transition-colors" href="#">Settings</a>
+<a class="text-muted-dark hover:text-primary text-sm font-medium leading-normal transition-colors" href="../settings.html">Settings</a>
 </nav>
 </div>
 <div class="flex flex-1 justify-end gap-8 items-center">
@@ -82,12 +82,12 @@
 <div class="layout-content-container flex flex-col max-w-[960px] flex-1">
 <!-- Breadcrumbs Component -->
 <div class="flex flex-wrap gap-2 px-4 pb-4">
-<a class="text-muted-dark hover:text-primary text-sm font-medium leading-normal flex items-center gap-1" href="#">
+<a class="text-muted-dark hover:text-primary text-sm font-medium leading-normal flex items-center gap-1" href="../dashboard.html">
 <span class="material-symbols-outlined text-sm">home</span>
                             Dashboard
                         </a>
 <span class="text-muted-dark text-sm font-medium leading-normal">/</span>
-<a class="text-muted-dark hover:text-primary text-sm font-medium leading-normal" href="#">Brands</a>
+<a class="text-muted-dark hover:text-primary text-sm font-medium leading-normal" href="index.html">Brands</a>
 <span class="text-muted-dark text-sm font-medium leading-normal">/</span>
 <span class="text-white text-sm font-medium leading-normal">Edit Brand</span>
 </div>
