--- a/admin/brands/index.html
+++ b/admin/brands/index.html
@@ -40,48 +40,54 @@
         body {
             font-family: 'Inter', sans-serif;
         }
+        .sidebar-active {
+            background-color: #393928;
+            border-left: 4px solid #f2f20d;
+        }
     </style>
 </head>
 <body class="bg-background-light dark:bg-background-dark min-h-screen text-slate-900 dark:text-white">
 <div class="flex h-screen overflow-hidden">
 <!-- Side Navigation -->
-<aside class="w-64 border-r border-border-dark bg-background-dark hidden md:flex flex-col">
-<div class="p-6 flex flex-col h-full">
-<div class="flex items-center gap-3 mb-10">
-<div class="size-8 text-primary">
-<svg fill="currentColor" viewbox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
-<path clip-rule="evenodd" d="M24 4H6V17.3333V30.6667H24V44H42V30.6667V17.3333H24V4Z" fill-rule="evenodd"></path>
-</svg>
+<!-- Sidebar Navigation -->
+<aside class="w-64 bg-background-light dark:bg-[#12120a] border-r border-slate-200 dark:border-[#393928] flex flex-col justify-between py-6 sticky top-0 h-screen">
+<div class="flex flex-col gap-8">
+<!-- Brand Identity -->
+<div class="px-6 flex items-center gap-3">
+<div class="bg-primary rounded-lg size-10 flex items-center justify-center text-background-dark">
+<span class="material-symbols-outlined font-bold">water_drop</span>
 </div>
-<div>
-<h1 class="text-white text-lg font-bold leading-tight tracking-tight">LIQUIDO</h1>
-<p class="text-[#baba9c] text-xs font-medium uppercase tracking-widest">Partner Portal</p>
+<div class="flex flex-col">
+<h1 class="text-lg font-bold leading-tight tracking-tight">LIQUIDO</h1>
+<p class="text-slate-500 dark:text-[#baba9c] text-xs font-medium uppercase tracking-widest">Admin Console</p>
 </div>
 </div>
-<nav class="flex-1 space-y-1">
-<a class="flex items-center gap-3 px-3 py-2.5 rounded-lg text-[#baba9c] hover:bg-surface-dark hover:text-white transition-colors" href="#">
+<!-- Navigation Links -->
+<nav class="flex flex-col gap-1 px-3">
+<a class="flex items-center gap-3 px-3 py-2.5 rounded-lg text-slate-600 dark:text-[#baba9c] hover:bg-slate-100 dark:hover:bg-[#2a2a1a] transition-colors" href="../dashboard.html">
 <span class="material-symbols-outlined">dashboard</span>
-<span class="text-sm font-medium">Dashboard</span>
+<p class="text-sm font-medium">Dashboard</p>
 </a>
-<a class="flex items-center gap-3 px-3 py-2.5 rounded-lg bg-surface-dark text-primary" href="#">
-<span class="material-symbols-outlined" style="font-variation-settings: 'FILL' 1">storefront</span>
-<span class="text-sm font-medium">Brand Management</span>
-</a>
-<a class="flex items-center gap-3 px-3 py-2.5 rounded-lg text-[#baba9c] hover:bg-surface-dark hover:text-white transition-colors" href="#">
+<a class="flex items-center gap-3 px-3 py-2.5 rounded-lg text-slate-600 dark:text-[#baba9c] hover:bg-slate-100 dark:hover:bg-[#2a2a1a] transition-colors" href="../products/index.html">
 <span class="material-symbols-outlined">inventory_2</span>
-<span class="text-sm font-medium">Inventory</span>
+<p class="text-sm font-medium">Products</p>
 </a>
-<a class="flex items-center gap-3 px-3 py-2.5 rounded-lg text-[#baba9c] hover:bg-surface-dark hover:text-white transition-colors" href="#">
-<span class="material-symbols-outlined">shopping_cart</span>
-<span class="text-sm font-medium">Orders</span>
+<a class="sidebar-active flex items-center gap-3 px-3 py-2.5 rounded-lg text-primary" href="index.html">
+<span class="material-symbols-outlined">loyalty</span>
+<p class="text-sm font-semibold">Brands</p>
+</a>
+<a class="flex items-center gap-3 px-3 py-2.5 rounded-lg text-slate-600 dark:text-[#baba9c] hover:bg-slate-100 dark:hover:bg-[#2a2a1a] transition-colors" href="../settings.html">
+<span class="material-symbols-outlined">settings</span>
+<p class="text-sm font-medium">Store Settings</p>
 </a>
 </nav>
-<div class="mt-auto pt-6 border-t border-border-dark">
-<a class="flex items-center gap-3 px-3 py-2.5 rounded-lg text-[#baba9c] hover:bg-surface-dark hover:text-white transition-colors" href="#">
-<span class="material-symbols-outlined">settings</span>
-<span class="text-sm font-medium">Settings</span>
-</a>
 </div>
+<!-- Logout Section -->
+<div class="px-4">
+<a href="../index.html" class="flex w-full cursor-pointer items-center justify-center overflow-hidden rounded-lg h-11 bg-primary text-background-dark text-sm font-bold transition-transform hover:scale-[1.02] active:scale-95">
+<span class="material-symbols-outlined mr-2">logout</span>
+<span>Logout</span>
+</a>
 </div>
 </aside>
 <!-- Main Content Area -->
