--- a/admin/inbox/index.html
+++ b/admin/inbox/index.html
@@ -40,57 +40,52 @@
         body {
             font-family: "Plus Jakarta Sans", sans-serif;
         }
+        .sidebar-active {
+            background-color: #393928;
+            border-left: 4px solid #f2f20d;
+        }
     </style>
 </head>
 <body class="bg-background-light dark:bg-background-dark text-slate-900 dark:text-white min-h-screen">
 <div class="flex h-screen overflow-hidden">
 <!-- Sidebar Navigation -->
-<aside class="w-72 flex-shrink-0 border-r border-border-dark bg-background-dark flex flex-col justify-between p-6">
+<aside class="w-64 bg-background-light dark:bg-[#12120a] border-r border-slate-200 dark:border-[#393928] flex flex-col justify-between py-6 sticky top-0 h-screen">
 <div class="flex flex-col gap-8">
-<div class="flex items-center gap-3">
-<div class="bg-primary rounded-lg size-10 flex items-center justify-center text-black">
+<!-- Brand Identity -->
+<div class="px-6 flex items-center gap-3">
+<div class="bg-primary rounded-lg size-10 flex items-center justify-center text-background-dark">
 <span class="material-symbols-outlined font-bold">water_drop</span>
 </div>
 <div class="flex flex-col">
-<h1 class="text-white text-lg font-bold leading-none tracking-tight">LIQUIDO Admin</h1>
-<p class="text-[#baba9c] text-xs font-medium uppercase tracking-wider mt-1">Vape Management</p>
+<h1 class="text-lg font-bold leading-tight tracking-tight">LIQUIDO</h1>
+<p class="text-slate-500 dark:text-[#baba9c] text-xs font-medium uppercase tracking-widest">Admin Console</p>
 </div>
 </div>
-<nav class="flex flex-col gap-2">
-<a class="flex items-center gap-3 px-4 py-3 text-[#baba9c] hover:text-white transition-colors" href="#">
+<!-- Navigation Links -->
+<nav class="flex flex-col gap-1 px-3">
+<a class="flex items-center gap-3 px-3 py-2.5 rounded-lg text-slate-600 dark:text-[#baba9c] hover:bg-slate-100 dark:hover:bg-[#2a2a1a] transition-colors" href="../dashboard.html">
 <span class="material-symbols-outlined">dashboard</span>
-<span class="text-sm font-semibold">Dashboard</span>
+<p class="text-sm font-medium">Dashboard</p>
 </a>
-<a class="flex items-center gap-3 px-4 py-3 text-[#baba9c] hover:text-white transition-colors" href="#">
-<span class="material-symbols-outlined">shopping_bag</span>
-<span class="text-sm font-semibold">Orders</span>
-</a>
-<a class="flex items-center gap-3 px-4 py-3 text-[#baba9c] hover:text-white transition-colors" href="#">
+<a class="flex items-center gap-3 px-3 py-2.5 rounded-lg text-slate-600 dark:text-[#baba9c] hover:bg-slate-100 dark:hover:bg-[#2a2a1a] transition-colors" href="../products/index.html">
 <span class="material-symbols-outlined">inventory_2</span>
-<span class="text-sm font-semibold">Inventory</span>
+<p class="text-sm font-medium">Products</p>
 </a>
-<a class="flex items-center gap-3 px-4 py-3 rounded-xl bg-primary text-black font-bold shadow-[0_0_20px_rgba(242,242,13,0.2)]" href="#">
-<span class="material-symbols-outlined">mail</span>
-<span class="text-sm">Inbox</span>
-<span class="ml-auto bg-black text-primary text-[10px] px-1.5 py-0.5 rounded-full">12</span>
+<a class="flex items-center gap-3 px-3 py-2.5 rounded-lg text-slate-600 dark:text-[#baba9c] hover:bg-slate-100 dark:hover:bg-[#2a2a1a] transition-colors" href="../brands/index.html">
+<span class="material-symbols-outlined">loyalty</span>
+<p class="text-sm font-medium">Brands</p>
 </a>
-<a class="flex items-center gap-3 px-4 py-3 text-[#baba9c] hover:text-white transition-colors" href="#">
+<a class="flex items-center gap-3 px-3 py-2.5 rounded-lg text-slate-600 dark:text-[#baba9c] hover:bg-slate-100 dark:hover:bg-[#2a2a1a] transition-colors" href="../settings.html">
 <span class="material-symbols-outlined">settings</span>
-<span class="text-sm font-semibold">Settings</span>
+<p class="text-sm font-medium">Store Settings</p>
 </a>
 </nav>
 </div>
-<div class="flex flex-col gap-2 pt-6 border-t border-border-dark">
-<div class="flex items-center gap-3 px-4 py-3 mb-2">
-<div class="size-8 rounded-full bg-surface-dark bg-cover bg-center" data-alt="Admin user avatar" style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuA3S-VNH6dMWAgV-VUMHKBfbEbOTLvTK3SAF2ylF1QppfhmGGPtnOYhr3xxfoEkciIeDfa96Ok5tkSsJbn9zGxNwHWTAHR2X-THEf5ouptvyZnO4OvmfEIynCj8jXH-qVE1-pQpINLHL10TLeGbtj3i3m92TbVv2chdidr77c82DIVpOblRjetuJB_cc_tkntym7Kuvqn1i83d-hu6kJ4tJgtyRV8lMf9qskLG2aFqIy5_JjTy9IQthapFLdHNTU40KwxyhoMR3pKU');"></div>
-<div class="flex flex-col">
-<span class="text-sm font-bold text-white leading-none">Alex Rivera</span>
-<span class="text-xs text-[#baba9c]">Store Manager</span>
-</div>
-</div>
-<a class="flex items-center gap-3 px-4 py-3 text-red-400 hover:text-red-300 transition-colors" href="#">
-<span class="material-symbols-outlined">logout</span>
-<span class="text-sm font-semibold">Logout</span>
+<!-- Logout Section -->
+<div class="px-4">
+<a href="../index.html" class="flex w-full cursor-pointer items-center justify-center overflow-hidden rounded-lg h-11 bg-primary text-background-dark text-sm font-bold transition-transform hover:scale-[1.02] active:scale-95">
+<span class="material-symbols-outlined mr-2">logout</span>
+<span>Logout</span>
 </a>
 </div>
 </aside>
