--- a/admin/products/index.html
+++ b/admin/products/index.html
@@ -43,54 +43,53 @@
         .fill-icon {
             font-variation-settings: 'FILL' 1;
         }
+        .sidebar-active {
+            background-color: #393928;
+            border-left: 4px solid #f2f20d;
+        }
     </style>
 </head>
 <body class="bg-background-light dark:bg-background-dark text-slate-900 dark:text-white min-h-screen">
 <div class="flex h-screen overflow-hidden">
-<!-- Side Navigation -->
-<aside class="w-64 flex flex-col border-r border-border-dark bg-background-dark">
-<div class="p-6 flex flex-col h-full">
+<!-- Sidebar Navigation -->
+<aside class="w-64 bg-background-light dark:bg-[#12120a] border-r border-slate-200 dark:border-[#393928] flex flex-col justify-between py-6 sticky top-0 h-screen">
+<div class="flex flex-col gap-8">
 <!-- Brand Identity -->
-<div class="flex items-center gap-3 mb-10">
-<div class="bg-primary rounded-full size-10 flex items-center justify-center text-background-dark">
+<div class="px-6 flex items-center gap-3">
+<div class="bg-primary rounded-lg size-10 flex items-center justify-center text-background-dark">
 <span class="material-symbols-outlined font-bold">water_drop</span>
 </div>
 <div class="flex flex-col">
-<h1 class="text-white text-base font-bold tracking-wider leading-none">LIQUIDO</h1>
-<p class="text-[#baba9c] text-[10px] uppercase font-bold tracking-widest mt-1">Admin Dashboard</p>
+<h1 class="text-lg font-bold leading-tight tracking-tight">LIQUIDO</h1>
+<p class="text-slate-500 dark:text-[#baba9c] text-xs font-medium uppercase tracking-widest">Admin Console</p>
 </div>
 </div>
-<!-- Nav Links -->
-<nav class="flex flex-col gap-2 flex-grow">
-<a class="flex items-center gap-3 px-4 py-3 text-[#baba9c] hover:text-white transition-colors" href="#">
+<!-- Navigation Links -->
+<nav class="flex flex-col gap-1 px-3">
+<a class="flex items-center gap-3 px-3 py-2.5 rounded-lg text-slate-600 dark:text-[#baba9c] hover:bg-slate-100 dark:hover:bg-[#2a2a1a] transition-colors" href="../dashboard.html">
 <span class="material-symbols-outlined">dashboard</span>
-<span class="text-sm font-medium">Dashboard</span>
+<p class="text-sm font-medium">Dashboard</p>
 </a>
-<a class="flex items-center gap-3 px-4 py-3 rounded-lg bg-border-dark text-white" href="#">
-<span class="material-symbols-outlined fill-icon text-primary">inventory_2</span>
-<span class="text-sm font-medium">Products</span>
+<a class="sidebar-active flex items-center gap-3 px-3 py-2.5 rounded-lg text-primary" href="index.html">
+<span class="material-symbols-outlined">inventory_2</span>
+<p class="text-sm font-semibold">Products</p>
 </a>
-<a class="flex items-center gap-3 px-4 py-3 text-[#baba9c] hover:text-white transition-colors" href="#">
-<span class="material-symbols-outlined">sell</span>
-<span class="text-sm font-medium">Brands</span>
+<a class="flex items-center gap-3 px-3 py-2.5 rounded-lg text-slate-600 dark:text-[#baba9c] hover:bg-slate-100 dark:hover:bg-[#2a2a1a] transition-colors" href="../brands/index.html">
+<span class="material-symbols-outlined">loyalty</span>
+<p class="text-sm font-medium">Brands</p>
 </a>
-<div class="h-px bg-border-dark my-4"></div>
-<a class="flex items-center gap-3 px-4 py-3 text-[#baba9c] hover:text-white transition-colors" href="#">
-<span class="material-symbols-outlined">person</span>
-<span class="text-sm font-medium">Profile</span>
-</a>
-<a class="flex items-center gap-3 px-4 py-3 text-[#baba9c] hover:text-white transition-colors" href="#">
+<a class="flex items-center gap-3 px-3 py-2.5 rounded-lg text-slate-600 dark:text-[#baba9c] hover:bg-slate-100 dark:hover:bg-[#2a2a1a] transition-colors" href="../settings.html">
 <span class="material-symbols-outlined">settings</span>
-<span class="text-sm font-medium">Settings</span>
+<p class="text-sm font-medium">Store Settings</p>
 </a>
 </nav>
-<!-- Logout -->
-<div class="mt-auto">
-<button class="flex items-center gap-3 px-4 py-3 text-red-400 hover:text-red-500 transition-colors w-full">
-<span class="material-symbols-outlined">logout</span>
-<span class="text-sm font-medium">Sign Out</span>
-</button>
 </div>
+<!-- Logout Section -->
+<div class="px-4">
+<a href="../index.html" class="flex w-full cursor-pointer items-center justify-center overflow-hidden rounded-lg h-11 bg-primary text-background-dark text-sm font-bold transition-transform hover:scale-[1.02] active:scale-95">
+<span class="material-symbols-outlined mr-2">logout</span>
+<span>Logout</span>
+</a>
 </div>
 </aside>
 <!-- Main Content Area -->
