--- a/admin/settings.html
+++ b/admin/settings.html
@@ -35,54 +35,53 @@
             background-color: rgba(242, 242, 13, 0.15);
             border-right: 3px solid #f2f20d;
         }
+        .sidebar-active {
+            background-color: #393928;
+            border-left: 4px solid #f2f20d;
+        }
     </style>
 </head>
 <body class="bg-background-light dark:bg-background-dark font-display text-slate-900 dark:text-slate-100 min-h-screen">
 <div class="flex h-screen overflow-hidden">
 <!-- Sidebar Navigation -->
-<aside class="w-72 flex-shrink-0 border-r border-slate-200 dark:border-slate-800 bg-white dark:bg-[#181811] flex flex-col">
-<div class="p-6 flex items-center gap-3">
-<div class="w-10 h-10 rounded-lg bg-primary flex items-center justify-center">
-<span class="material-symbols-outlined text-black font-bold">water_drop</span>
+<aside class="w-64 bg-background-light dark:bg-[#12120a] border-r border-slate-200 dark:border-[#393928] flex flex-col justify-between py-6 sticky top-0 h-screen">
+<div class="flex flex-col gap-8">
+<!-- Brand Identity -->
+<div class="px-6 flex items-center gap-3">
+<div class="bg-primary rounded-lg size-10 flex items-center justify-center text-background-dark">
+<span class="material-symbols-outlined font-bold">water_drop</span>
 </div>
 <div class="flex flex-col">
-<h1 class="text-lg font-bold leading-none tracking-tight">LIQUIDO Admin</h1>
-<p class="text-xs text-slate-500 dark:text-[#baba9c]">Vape Store Management</p>
+<h1 class="text-lg font-bold leading-tight tracking-tight">LIQUIDO</h1>
+<p class="text-slate-500 dark:text-[#baba9c] text-xs font-medium uppercase tracking-widest">Admin Console</p>
 </div>
 </div>
-<nav class="flex-1 px-4 py-4 space-y-1">
-<a class="flex items-center gap-3 px-4 py-3 rounded-lg text-slate-600 dark:text-[#baba9c] hover:bg-slate-100 dark:hover:bg-white/5 transition-colors" href="#">
+<!-- Navigation Links -->
+<nav class="flex flex-col gap-1 px-3">
+<a class="flex items-center gap-3 px-3 py-2.5 rounded-lg text-slate-600 dark:text-[#baba9c] hover:bg-slate-100 dark:hover:bg-[#2a2a1a] transition-colors" href="dashboard.html">
 <span class="material-symbols-outlined">dashboard</span>
-<span class="text-sm font-medium">Dashboard</span>
+<p class="text-sm font-medium">Dashboard</p>
 </a>
-<a class="flex items-center gap-3 px-4 py-3 rounded-lg text-slate-600 dark:text-[#baba9c] hover:bg-slate-100 dark:hover:bg-white/5 transition-colors" href="#">
+<a class="flex items-center gap-3 px-3 py-2.5 rounded-lg text-slate-600 dark:text-[#baba9c] hover:bg-slate-100 dark:hover:bg-[#2a2a1a] transition-colors" href="products/index.html">
 <span class="material-symbols-outlined">inventory_2</span>
-<span class="text-sm font-medium">Products</span>
+<p class="text-sm font-medium">Products</p>
 </a>
-<a class="flex items-center gap-3 px-4 py-3 rounded-lg text-slate-600 dark:text-[#baba9c] hover:bg-slate-100 dark:hover:bg-white/5 transition-colors" href="#">
-<span class="material-symbols-outlined">sell</span>
-<span class="text-sm font-medium">Brands</span>
+<a class="flex items-center gap-3 px-3 py-2.5 rounded-lg text-slate-600 dark:text-[#baba9c] hover:bg-slate-100 dark:hover:bg-[#2a2a1a] transition-colors" href="brands/index.html">
+<span class="material-symbols-outlined">loyalty</span>
+<p class="text-sm font-medium">Brands</p>
 </a>
-<a class="flex items-center gap-3 px-4 py-3 rounded-lg text-primary bg-primary/10 active-nav" href="#">
-<span class="material-symbols-outlined">storefront</span>
-<span class="text-sm font-medium">Store Settings</span>
-</a>
-<a class="flex items-center gap-3 px-4 py-3 rounded-lg text-slate-600 dark:text-[#baba9c] hover:bg-slate-100 dark:hover:bg-white/5 transition-colors" href="#">
-<span class="material-symbols-outlined">admin_panel_settings</span>
-<span class="text-sm font-medium">Security</span>
+<a class="sidebar-active flex items-center gap-3 px-3 py-2.5 rounded-lg text-primary" href="settings.html">
+<span class="material-symbols-outlined">settings</span>
+<p class="text-sm font-semibold">Store Settings</p>
 </a>
 </nav>
-<div class="p-4 border-t border-slate-200 dark:border-slate-800">
-<div class="flex items-center gap-3 p-2">
-<div class="w-9 h-9 rounded-full bg-slate-200 dark:bg-slate-700 overflow-hidden">
-<img alt="Admin Profile" data-alt="Admin user profile avatar" src="https://lh3.googleusercontent.com/aida-public/AB6AXuD14WJHL2GV-rqnbrhBIu1459KRN9L51ZZhDoDG143mBGNUxYIeliofRUbSGpb-6fFWvLAD_WFlrLz513JQMQnYgj_cEKnOCkOjq1dPjYRIbTqnXIPNiS-r6_jtpRfpv3_yhyb56Mfz_NxHubAnoekgAFDXrfmlS34M_mSuzuRen5auixdW9_puIBfYdAjw-snaadC6YgmqjRBkXw_VPBzqRhRctB2XxQGgmQUusv2BqdSeHCzEqkjIT0JMftqj9laO1uPMnwUoo34"/>
 </div>
-<div class="flex flex-col overflow-hidden">
-<p class="text-sm font-semibold truncate">Alex Johnson</p>
-<p class="text-xs text-slate-500 dark:text-[#baba9c] truncate">alex@liquido.shop</p>
-</div>
-<span class="material-symbols-outlined text-slate-400 ml-auto cursor-pointer">logout</span>
-</div>
+<!-- Logout Section -->
+<div class="px-4">
+<a href="index.html" class="flex w-full cursor-pointer items-center justify-center overflow-hidden rounded-lg h-11 bg-primary text-background-dark text-sm font-bold transition-transform hover:scale-[1.02] active:scale-95">
+<span class="material-symbols-outlined mr-2">logout</span>
+<span>Logout</span>
+</a>
 </div>
 </aside>
 <!-- Main Content -->
